--- a/simple-html-page.html
+++ b/simple-html-page.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script src="node_example.js"></script>
+  </head>
   <body>
+    <h1>HELLO JAVASCRIPT</h1>
     <p>Before the script...</p>
 
-    <script>
-      console.log("Hello World!");
-    </script>
+    <!-- <script>
+      console.log("Hello World!!!!!!!!!");
+    </script> -->
 
     <p>...After the script.</p>
   </body>
